t/res.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-v2
  labels: { "policy-as-versioned.dev/policy-version": "2.0.0" }
spec:
  containers: [{ name: app, image: nginx }]
